Fix text-wrapping in CSS.

--- a/examples/javascript/less/app.less
+++ b/examples/javascript/less/app.less
@@ -166,6 +166,7 @@ div.data-grid {
 
 		&.insight {
 			text-align: center ;
+			white-space: nowrap ;
 		}
 	}
 
